force-app/main/default/objects/SPEN_SAPStatusAlert__c/SPEN_SAPStatusAlert__c.object-meta.xml
<CustomObject>
    <label>SAP Status Alert</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>SAP Status Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Status Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>