force-app/main/default/objects/SPEN_SAPStatusAlert__c/fields/SPEN_Entity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Entity__c</fullName>
    <label>Entity</label>
    <length>8</length>
    <type>Text</type>
</CustomField>