force-app/main/default/objects/SPEN_SAPStatusAlert__c/fields/SPEN_EntityStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EntityStatus__c</fullName>
    <label>Entity Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Old</fullName>
            </value>
            <value>
                <fullName>FPEC</fullName>
            </value>
            <value>
                <fullName>PRTQ</fullName>
            </value>
            <value>
                <fullName>PENA</fullName>
            </value>
            <value>
                <fullName>QUOP</fullName>
            </value>
            <value>
                <fullName>WTPL</fullName>
            </value>
            <value>
                <fullName>PECA</fullName>
            </value>
            <value>
                <fullName>CARE PECA</fullName>
            </value>
            <value>
                <fullName>CPRE PECA</fullName>
            </value>
            <value>
                <fullName>ACPC</fullName>
            </value>
            <value>
                <fullName>JOBR</fullName>
            </value>
            <value>
                <fullName>CLOS</fullName>
            </value>
            <value>
                <fullName>CANB</fullName>
            </value>
            <value>
                <fullName>CANA</fullName>
            </value>
            <value>
                <fullName>BESE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>