force-app/main/default/objects/SPEN_SAPStatusAlert__c/fields/SPEN_ProcessDescription__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ProcessDescription__c</fullName>
    <label>Process Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>