force-app/main/default/objects/SPEN_SAPStatusAlert__c/fields/SPEN_ProcessId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ProcessId__c</fullName>
    <label>ProcessId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>