force-app/main/default/objects/SPEN_SAPStatusAlert__c/fields/SPEN_RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SAP Status Alerts</relationshipLabel>
    <relationshipName>SAP_Status_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>