force-app/main/default/objects/SPEN_SAPStatusAlert__c/fields/SPEN_StatusChangeDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StatusChangeDate__c</fullName>
    <label>Status Change Date</label>
    <type>Date</type>
</CustomField>