force-app/main/default/objects/SPEN_SAPStatusAlert__c/fields/SPEN_StatusChangeTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StatusChangeTime__c</fullName>
    <label>Status Change Time</label>
    <type>Time</type>
</CustomField>