force-app/main/default/objects/SPEN_SAPStatusAlert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_RelatedCase__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_Entity__c</columns>
    <columns>SPEN_EntityOldStatus__c</columns>
    <columns>SPEN_EntityStatus__c</columns>
    <columns>SPEN_ProcessId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_RelatedCase__c</field>
        <operation>equals</operation>
        <value>00295036</value>
    </filters>
    <label>All</label>
</ListView>